--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 VITE_APP_NAME=JASHANMEET
-# VITE_BACKEND_URL=http://192.168.1.102:5000
-VITE_BACKEND_URL=http://localhost:5000
+# VITE_BACKEND_URL=http://localhost:5000
+VITE_BACKEND_URL=https://gapi.flyvision.in
